k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: s3-proxy
  labels:
    name: s3-proxy
    environment: production
